--- a/CV/references2.bib
+++ b/CV/references2.bib
@@ -3,13 +3,12 @@
 	author = {Montoya-Ciriaco, Nina and Hereira-Pacheco, Stephanie and Estrada-Torres, Arturo and   Dendooven, Luc and Méndez de la Cruz, Fausto R. and Gómez-Acata, Elizabeth Selene and Díaz de la Vega-Pérez, Aníbal H. and Navaro-Nota, Yendi E.},
 	year = {2023},
 	date = {2023},
-	journal = {Microbiology Spectrum, En revisión.},	
-	pages = {n/a},
-	volume = {n/n/a},
-	number = {n/a},
+	journal = {Microbiology Spectrum},	
+  pages = {e01780-23},
+  volume = {0},
+	number = {0},
 	langid = {en}
 }
-
 
 
 @article{https://doi.org/10.1111/1749-4877.12755,
