--- a/CV/references.bib
+++ b/CV/references.bib
@@ -1,3 +1,53 @@
+@article{https://doi.org/10.1111/1749-4877.12755,
+author = {Hernández, Mauricio and Hereira-Pacheco, Stephanie and Alberdi, Antton and Díaz de la Vega-Pérez, Aníbal H. and Estrada-Torres, Arturo and Ancona, Sergio and Navaro-Nota, Yendi E.},
+title = {DNA metabarcoding reveals seasonal changes in diet composition across four arthropod-eating lizard species (Phrynosomatidae: Sceloporus)},
+journal = {Integrative Zoology},
+volume = {n/a},
+number = {n/a},
+pages = {},
+keywords = {arthropod-eating lizards, diet breadth, environmental barcoding, mountainous ecosystem, seasonal dietary shifts},
+doi = {https://doi.org/10.1111/1749-4877.12755},
+url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/1749-4877.12755},
+eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1111/1749-4877.12755},
+abstract = {Abstract Diet composition and its ecological drivers are rarely investigated in coexisting closely related species. We used a molecular approach to characterize the seasonal variation in diet composition in four spiny lizard species inhabiting a mountainous ecosystem. DNA metabarcoding revealed that the lizards Sceloporus aeneus, S. bicanthalis, S. grammicus, and S. spinosus mostly consumed arthropods of the orders Hemiptera, Araneae, Hymenoptera, and Coleoptera. The terrestrial lizards S. aeneus and S. bicanthalis mostly predated ants and spiders, whereas the arboreal–saxicolous S. grammicus and saxicolous S. spinosus largely consumed grasshoppers and leafhoppers. The taxonomic and phylogenetic diversity of the prey was higher during the dry season than the rainy season, likely because reduced prey availability in the dry season forced lizards to diversify their diets to meet their nutritional demands. Dietary and phylogenetic composition varied seasonally depending on the species, but only dietary composition varied with altitude. Seasonal dietary turnover was greater in S. spinosus than in S. bicanthalis, suggesting site-specific seasonal variability in prey availability; no other differences among species were observed. S. bicanthalis, which lives at the highest altitude in our study site, displayed interseasonal variation in diet breadth. Dietary differences were correlated with the species’ feeding strategies and elevational distribution, which likely contributed to the coexistence of these lizard species in the studied geographic area and beyond.}
+}
+
+
+
+@article{https://doi.org/10.1111/1749-4877.12711,
+author = {Hernández, Mauricio and Ancona, Sergio and Hereira-Pacheco, Stephanie and Díaz de la Vega-Pérez, Aníbal H. and Navarro-Nota, Yendi E.},
+title = {Comparative analysis of two nonlethal methods for the study of the gut bacterial communities in wild lizards},
+journal = {Integrative Zoology},
+volume = {n/a},
+number = {n/a},
+pages = {},
+keywords = {animal microbiome, cloacal swabs, fecal samples, intestinal tract, reptile gut microbiome},
+doi = {https://doi.org/10.1111/1749-4877.12711},
+url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/1749-4877.12711},
+eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1111/1749-4877.12711},
+abstract = {Abstract Fecal samples or cloacal swabs are preferred over lethal dissections to study vertebrate gut microbiota for ethical reasons, but it remains unclear which nonlethal methods provide more accurate information about gut microbiota. We compared the bacterial communities of three gastrointestinal tract (GIT) segments, that is, stomach, small intestine (midgut), and rectum (hindgut) with the bacterial communities of the cloaca and feces in the mesquite lizard Sceloporus grammicus. The hindgut had the highest taxonomic and functional alpha diversity, followed by midgut and feces, whereas the stomach and cloaca showed the lowest diversities. The taxonomic assemblages of the GIT segments at the phylum level were strongly correlated with those retrieved from feces and cloacal swabs (rs > 0.84 in all cases). The turnover ratio of Amplicon Sequence Variants (ASVs) between midgut and hindgut and the feces was lower than the ratio between these segments and the cloaca. More than half of the core-ASVs in the midgut (24 of 32) and hindgut (58 of 97) were also found in feces, while less than 5 were found in the cloaca. At the ASVs level, however, the structure of the bacterial communities of the midgut and hindgut were similar to those detected in feces and cloaca. Our findings suggest that fecal samples and cloacal swabs of spiny lizards provide a good approximation of the taxonomic assemblages and beta diversity of midgut and hindgut microbiota, while feces better represent the bacterial communities of the intestinal segments at a single nucleotide variation level than cloacal swabs.}
+}
+
+
+
+
+@article{HEREIRAPACHECO2023101225,
+title = {Shifts in root-associated fungal communities under drought conditions in Ricinus communis},
+journal = {Fungal Ecology},
+volume = {63},
+pages = {101225},
+year = {2023},
+issn = {1754-5048},
+doi = {https://doi.org/10.1016/j.funeco.2023.101225},
+url = {https://www.sciencedirect.com/science/article/pii/S1754504823000028},
+author = {Stephanie E. Hereira-Pacheco and Arturo Estrada-Torres and Luc Dendooven and Yendi E. Navarro-Noya},
+keywords = {Arbuscular mycorrhiza, Castor bean, Fungal endophytes, Plant microbiome, Plant mycobiome, Rhizosphere and soil fungal communities, Water stress},
+abstract = {Rhizosphere and endophytic microbial communities are crucial for plant fitness and affect how plants cope with abiotic stress. In this study, we provide evidence that drought stress affected alpha and beta diversity of fungal communities associated with the roots and rhizosphere of castor bean (Ricinus communis) through metabarcoding of 18S rRNA gene. Plants were cultivated in soil columns in the greenhouse at three different watering regimes, i.e., 50% water holding capacity (WHC; wet) or adjusted to 50% WHC every 2 weeks (dry) or every month (extremely dry). Ascomycota, Basidiomycota, Chytridiomycota and Fusarium dominated the soil and rhizosphere and Fusarium, Cladosporium, Mucor, Cystofilobasidium, Penicillium and Malassezia the roots. Under extremely dry conditions, root and rhizosphere taxonomic and functional alpha diversity increased compared to the wet treatment. However, the species turnover decreased in the stressed compared to the non-stressed roots, enriching specific fungal groups. Drought did not affect the association between castor bean and arbuscular mycorrhizal (AM) fungi. The phenolic content in stressed roots was significantly lower compared to wet conditions with a negative correlation between AM fungal colonization and root phenolic content.}
+}
+
+
+
+
 
 @article{Hereira-Pacheco2021,
 	title = {The root endophytic bacterial community of Ricinus communis L. resembles the seeds community more than the rhizosphere bacteria independent of soil water content},
