--- a/CV/references.bib
+++ b/CV/references.bib
@@ -1,31 +1,89 @@
-@article{https://doi.org/10.1111/1749-4877.12755,
-author = {Hernández, Mauricio and Hereira-Pacheco, Stephanie and Alberdi, Antton and Díaz de la Vega-Pérez, Aníbal H. and Estrada-Torres, Arturo and Ancona, Sergio and Navaro-Nota, Yendi E.},
-title = {DNA metabarcoding reveals seasonal changes in diet composition across four arthropod-eating lizard species (Phrynosomatidae: Sceloporus)},
-journal = {Integrative Zoology},
-volume = {n/a},
-number = {n/a},
-pages = {},
-keywords = {arthropod-eating lizards, diet breadth, environmental barcoding, mountainous ecosystem, seasonal dietary shifts},
-doi = {https://doi.org/10.1111/1749-4877.12755},
-url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/1749-4877.12755},
-eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1111/1749-4877.12755},
-abstract = {Abstract Diet composition and its ecological drivers are rarely investigated in coexisting closely related species. We used a molecular approach to characterize the seasonal variation in diet composition in four spiny lizard species inhabiting a mountainous ecosystem. DNA metabarcoding revealed that the lizards Sceloporus aeneus, S. bicanthalis, S. grammicus, and S. spinosus mostly consumed arthropods of the orders Hemiptera, Araneae, Hymenoptera, and Coleoptera. The terrestrial lizards S. aeneus and S. bicanthalis mostly predated ants and spiders, whereas the arboreal–saxicolous S. grammicus and saxicolous S. spinosus largely consumed grasshoppers and leafhoppers. The taxonomic and phylogenetic diversity of the prey was higher during the dry season than the rainy season, likely because reduced prey availability in the dry season forced lizards to diversify their diets to meet their nutritional demands. Dietary and phylogenetic composition varied seasonally depending on the species, but only dietary composition varied with altitude. Seasonal dietary turnover was greater in S. spinosus than in S. bicanthalis, suggesting site-specific seasonal variability in prey availability; no other differences among species were observed. S. bicanthalis, which lives at the highest altitude in our study site, displayed interseasonal variation in diet breadth. Dietary differences were correlated with the species’ feeding strategies and elevational distribution, which likely contributed to the coexistence of these lizard species in the studied geographic area and beyond.}
+@article{DIAZGARCIA2025126852,
+title = {Biodiversity between volcanoes: A multi-taxa analysis to identify priority conservation areas in a highly fragmented landscape of the Trans-Mexican Volcanic Belt},
+journal = {Journal for Nature Conservation},
+volume = {84},
+pages = {126852},
+year = {2025},
+issn = {1617-1381},
+doi = {https://doi.org/10.1016/j.jnc.2025.126852},
+url = {https://www.sciencedirect.com/science/article/pii/S1617138125000299},
+author = {J.M. Díaz-García and A.H. {Díaz de la Vega-Pérez} and Y. Navarro-Noya and A. Ramírez-Ponce and S. Guillén and J.P. Esparza-Carlos and S. Hereira-Pacheco and J.L. {Martínez y Pérez} and V. Moctezuma and M. Juárez-Díaz and B. Salazar-Hernández and A. {Arias-Del Razo} and M. Rivera-Vazquez and A. Estrada-Torres and I. {Arias-Del Razo}},
+keywords = {Taxonomic diversity, Disturbance tolerance, Protected areas, Temperate forest, Biological corridors, Neotropics, Deforestation},
+abstract = {The effectiveness of protected areas (PAs) for conservation is under debate because many were decreed without considering biological criteria. Efforts have been made to increase their numbers and to promote ecological connectivity among the existing PAs. In this study, we identify new priority conservation areas (PCAs) through a multi-taxa analysis in a highly fragmented landscape between La Malinche (LMNP) and Iztaccíhuatl − Popocatépetl (IPNP) National Parks in the Trans-Mexican Volcanic Belt. Particularly, we compared the taxonomic diversity of amphibians, reptiles, terrestrial mammals, scarab beetles, myxomycetes, and soil fungal species in six polygons with different land uses and vegetation types. We paid attention to the taxonomic diversity patterns according to the disturbance tolerance of the species, and we described the relationship between biodiversity and environmental variables. Adjacent temperate forests of the IPNP are habitats for the greatest number of species and individuals with low tolerance to disturbance. Polygons located in the central hills of Tlaxcala serve as a reservoir of mainly generalist species but also host exclusive and low tolerance species even though ∼ 63 % of the original vegetation has been transformed. Restoration and conservation through Areas Voluntarily Destined for Conservation and communal protected areas is a challenge that must be addressed to promote biological connectivity between the studied National Parks. Finally, we suggest that multi-taxonomic approaches discriminating species by their level of disturbance tolerance could be an efficient tool to identify new PCAs that ensure ecological processes and maintain diverse communities in highly fragmented landscapes.}
+}
+
+
+@article{hereira2025metagenomic,
+  title={Metagenomic analysis of fungal assemblages at a regional scale in high-altitude temperate forest soils: alternative methods to determine diversity, composition and environmental drivers},
+  author={Hereira-Pacheco, Stephanie and Arias-Del Razo, Itzel and Miranda-Carrazco, Alejandra and Dendooven, Luc and Estrada-Torres, Arturo and Navarro-Noya, Yendi E},
+  journal={PeerJ},
+  volume={13},
+  pages={e18323},
+  year={2025},
+  publisher={PeerJ Inc.}
+}
+
+@article {Vazquez-Rosas-Landa2024.07.24.604998,
+	author = {Vazquez-Rosas-Landa, Mirna and P{e}rez-Ceballos, Rosela and Zald{\i}var-Jim{e}nez, Arturo and Hereira-Pacheco, Stephanie E and P{e}rez-Gonzalez, Leonardo D. and Prieto-Dav{o}, Alejandra and Celis-Hernandez, Omar and Canales-Delgadillo, Julio C.},
+	title = {Flooding patterns shape microbial community in mangrove sediments},
+	elocation-id = {2024.07.24.604998},
+	year = {2024},
+	doi = {10.1101/2024.07.24.604998},
+	publisher = {Cold Spring Harbor Laboratory},
+	abstract = {Background Mangrove ecosystems located in the tropics and subtropics, are crucial for regulating global weather patterns and sequestering carbon. However, they face threats from human activities like altered water flow and deforestation. While the symbiotic relationship between mangrove trees and surrounding microbes are essential for their survival, the impact of human activity on these microbial communities remains incompletely understood. We investigated how microbial communities change in degraded mangrove ecosystems due to loss of hydrologic connectivity, aiming to elucidate consequences and inform restoration strategies.Methods Employing 16S rRNA sequencing, we analyzed samples of sediment cores from conserved, moderately degraded, and degraded mangrove sites across dry and flood seasons at three sediment depths.Results Our analysis identified 11,469 Amplicon Single Variant (ASVs), revealing diversity loss correlated with degradation levels. Notably, we observed shifts in microbial diversity within sediment layers, with conserved sites dominated by Vibrionaceae in upper layers, potentially indicating urban contamination. In moderate-degradation sites, seasonal patterns emerged, with Halomonas and Marinomonas dominating the dry season and Exiguobacterium thriving during flooding. Interestingly, a community mainly composed of Firmicutes persisted across all degradation scenarios in deeper sediment layers, suggesting potential for ecosystem restoration. Our findings provide insights into microbial responses to human-induced stressors and highlight the role of core microbial communities in guiding restoration efforts for degraded mangrove ecosystems.Competing Interest StatementThe authors have declared no competing interest.},
+	URL = {https://www.biorxiv.org/content/early/2024/07/25/2024.07.24.604998},
+	eprint = {https://www.biorxiv.org/content/early/2024/07/25/2024.07.24.604998.full.pdf},
+	journal = {bioRxiv}
+}
+
+
+@article{https://doi.org/10.1111/mec.17426,
+author = {Hernández, Mauricio and Ancona, Sergio and Hereira-Pacheco, Stephanie and Díaz de la Vega-Pérez, Aníbal H. and Alberdi, Antton and Navarro-Noya, Yendi E.},
+title = {Seasonal dietary changes relate to gut microbiota composition depending on the host species but do not correlate with gut microbiota diversity in arthropod-eating lizards},
+journal = {Molecular Ecology},
+volume = {33},
+number = {14},
+pages = {e17426},
+keywords = {arthropod-eating lizards, gut microbiota, mountain ecosystems, Sceloporus, seasonal dietary changes},
+doi = {https://doi.org/10.1111/mec.17426},
+url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/mec.17426},
+eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1111/mec.17426},
+note = {e17426 MEC-23-1184.R2},
+abstract = {Abstract The animal gut microbiota is strongly influenced by environmental factors that shape their temporal dynamics. Although diet is recognized as a major driver of gut microbiota variation, dietary patterns have seldom been linked to gut microbiota dynamics in wild animals. Here, we analysed the gut microbiota variation between dry and rainy seasons across four Sceloporus species (S. aeneus, S. bicanthalis, S. grammicus and S. spinosus) from central Mexico in light of temporal changes in diet composition. The lizard microbiota was dominated by Firmicutes (now Bacillota) and Bacteroidota, and the closely related species S. aeneus and S. bicanthalis shared a great number of core bacterial taxa. We report species-specific seasonal changes in gut microbiota diversity and composition: greater alpha diversity during the dry compared to the rainy season in S. bicanthalis, the opposite pattern in S. aeneus, and no seasonal differences in S. grammicus and S. spinosus. Our findings indicated a positive association between gut bacterial composition and dietary composition for S. bicanthalis and S. grammicus, but bacterial diversity did not increase linearly with dietary richness in any lizard species. In addition, seasonality affected bacterial composition, and microbial community similarity increased between S. aeneus and S. bicanthalis, as well as between S. grammicus and S. spinosus. Together, our results illustrate that seasonal variation and dietary composition play a role in shaping gut microbiota in lizard populations, but this is not a rule and other ecological factors influence microbiota variation.},
+year = {2024}
 }
 
 
 
+@article{https://doi.org/10.1111/1749-4877.12755,
+author = {HERNÁNDEZ, Mauricio and HEREIRA-PACHECO, Stephanie and ALBERDI, Antton and DÍAZ DE LA VEGA-PÉREZ, Aníbal H. and ESTRADA-TORRES, Arturo and ANCONA, Sergio and NAVARRO-NOYA, Yendi E.},
+title = {DNA metabarcoding reveals seasonal changes in diet composition across four arthropod-eating lizard species (Phrynosomatidae: Sceloporus)},
+journal = {Integrative Zoology},
+volume = {19},
+number = {3},
+pages = {480-495},
+keywords = {arthropod-eating lizards, diet breadth, environmental barcoding, mountainous ecosystem, seasonal dietary shifts},
+doi = {https://doi.org/10.1111/1749-4877.12755},
+url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/1749-4877.12755},
+eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1111/1749-4877.12755},
+abstract = {Abstract Diet composition and its ecological drivers are rarely investigated in coexisting closely related species. We used a molecular approach to characterize the seasonal variation in diet composition in four spiny lizard species inhabiting a mountainous ecosystem. DNA metabarcoding revealed that the lizards Sceloporus aeneus, S. bicanthalis, S. grammicus, and S. spinosus mostly consumed arthropods of the orders Hemiptera, Araneae, Hymenoptera, and Coleoptera. The terrestrial lizards S. aeneus and S. bicanthalis mostly predated ants and spiders, whereas the arboreal–saxicolous S. grammicus and saxicolous S. spinosus largely consumed grasshoppers and leafhoppers. The taxonomic and phylogenetic diversity of the prey was higher during the dry season than the rainy season, likely because reduced prey availability in the dry season forced lizards to diversify their diets to meet their nutritional demands. Dietary and phylogenetic composition varied seasonally depending on the species, but only dietary composition varied with altitude. Seasonal dietary turnover was greater in S. spinosus than in S. bicanthalis, suggesting site-specific seasonal variability in prey availability; no other differences among species were observed. S. bicanthalis, which lives at the highest altitude in our study site, displayed interseasonal variation in diet breadth. Dietary differences were correlated with the species’ feeding strategies and elevational distribution, which likely contributed to the coexistence of these lizard species in the studied geographic area and beyond.},
+year = {2024}
+}
+
+
 @article{https://doi.org/10.1111/1749-4877.12711,
-author = {Hernández, Mauricio and Ancona, Sergio and Hereira-Pacheco, Stephanie and Díaz de la Vega-Pérez, Aníbal H. and Navarro-Nota, Yendi E.},
+author = {HERNÁNDEZ, Mauricio and ANCONA, Sergio and HEREIRA-PACHECO, Stephanie and DÍAZ DE LA VEGA-PÉREZ, Aníbal H. and NAVARRO-NOYA, Yendi E.},
 title = {Comparative analysis of two nonlethal methods for the study of the gut bacterial communities in wild lizards},
 journal = {Integrative Zoology},
-volume = {n/a},
-number = {n/a},
-pages = {},
+volume = {18},
+number = {6},
+pages = {1056-1071},
 keywords = {animal microbiome, cloacal swabs, fecal samples, intestinal tract, reptile gut microbiome},
 doi = {https://doi.org/10.1111/1749-4877.12711},
 url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/1749-4877.12711},
 eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1111/1749-4877.12711},
-abstract = {Abstract Fecal samples or cloacal swabs are preferred over lethal dissections to study vertebrate gut microbiota for ethical reasons, but it remains unclear which nonlethal methods provide more accurate information about gut microbiota. We compared the bacterial communities of three gastrointestinal tract (GIT) segments, that is, stomach, small intestine (midgut), and rectum (hindgut) with the bacterial communities of the cloaca and feces in the mesquite lizard Sceloporus grammicus. The hindgut had the highest taxonomic and functional alpha diversity, followed by midgut and feces, whereas the stomach and cloaca showed the lowest diversities. The taxonomic assemblages of the GIT segments at the phylum level were strongly correlated with those retrieved from feces and cloacal swabs (rs > 0.84 in all cases). The turnover ratio of Amplicon Sequence Variants (ASVs) between midgut and hindgut and the feces was lower than the ratio between these segments and the cloaca. More than half of the core-ASVs in the midgut (24 of 32) and hindgut (58 of 97) were also found in feces, while less than 5 were found in the cloaca. At the ASVs level, however, the structure of the bacterial communities of the midgut and hindgut were similar to those detected in feces and cloaca. Our findings suggest that fecal samples and cloacal swabs of spiny lizards provide a good approximation of the taxonomic assemblages and beta diversity of midgut and hindgut microbiota, while feces better represent the bacterial communities of the intestinal segments at a single nucleotide variation level than cloacal swabs.}
+abstract = {Abstract Fecal samples or cloacal swabs are preferred over lethal dissections to study vertebrate gut microbiota for ethical reasons, but it remains unclear which nonlethal methods provide more accurate information about gut microbiota. We compared the bacterial communities of three gastrointestinal tract (GIT) segments, that is, stomach, small intestine (midgut), and rectum (hindgut) with the bacterial communities of the cloaca and feces in the mesquite lizard Sceloporus grammicus. The hindgut had the highest taxonomic and functional alpha diversity, followed by midgut and feces, whereas the stomach and cloaca showed the lowest diversities. The taxonomic assemblages of the GIT segments at the phylum level were strongly correlated with those retrieved from feces and cloacal swabs (rs > 0.84 in all cases). The turnover ratio of Amplicon Sequence Variants (ASVs) between midgut and hindgut and the feces was lower than the ratio between these segments and the cloaca. More than half of the core-ASVs in the midgut (24 of 32) and hindgut (58 of 97) were also found in feces, while less than 5 were found in the cloaca. At the ASVs level, however, the structure of the bacterial communities of the midgut and hindgut were similar to those detected in feces and cloaca. Our findings suggest that fecal samples and cloacal swabs of spiny lizards provide a good approximation of the taxonomic assemblages and beta diversity of midgut and hindgut microbiota, while feces better represent the bacterial communities of the intestinal segments at a single nucleotide variation level than cloacal swabs.},
+year = {2023}
 }
 
 
